[bug 819167] Reduce forum whitespace

--- a/media/less/main.less
+++ b/media/less/main.less
@@ -815,6 +815,11 @@ input[type=button],
     }
   }
 
+  &.condensed {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 0;
+  }
+
   &.tight {
     > li {
       span,
@@ -851,6 +856,11 @@ input[type=button],
   background: @sidebarBackground url('../img/grain.png');
   color: @textDarkGrey;
   padding: 16px 20px;
+
+  &.condensed {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 0;
+  }
 
   &.tight {
     font-size: 12px;
